--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             { id: 9, title: "sunrise in the jedi room", completed: false, story: "", photo: "" },
             { id: 10, title: "rock climb at corec", completed: false, story: "", photo: "" },
             { id: 11, title: "visit the dining courts", completed: false, story: "", photo: "" },
-            { id: 12, title: "rock climb at corec", completed: false, story: "", photo: "" },
+            { id: 12, title: "eat at all places in union, completed: false, story: "", photo: "" },
             { id: 13, title: "bowl in the union", completed: false, story: "", photo: "" },
             { id: 14, title: "attend purdue vs iu game", completed: false, story: "", photo: "" },
             { id: 15, title: "put a bike in a tree", completed: false, story: "", photo: "" },
@@ -329,7 +329,7 @@
             { id: 20, title: "go to hort park at sunset", completed: false, story: "", photo: "" },
             { id: 21, title: "hillenbrunch", completed: false, story: "", photo: "" },
             { id: 22, title: "get a copy of the exponent", completed: false, story: "", photo: "" },
-            { id: 23, title: "rock climb at corec", completed: false, story: "", photo: "" },
+            { id: 23, title: "carve name in harrys", completed: false, story: "", photo: "" },
             { id: 24, title: "have a beer in beering", completed: false, story: "", photo: "" },
             { id: 25, title: "walk under the bell tower", completed: false, story: "", photo: "" },
             { id: 26, title: "graduate!!!", completed: false, story: "", photo: "" }
