--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎓 Senior Year Bucket List</h1>
-            <p>Purdue University 2025-2026</p>
+            <h1>sam's final sem @ purdue</h1>
+            <p>26 items for 2026 grad</p>
         </header>
 
         <div class="stats">
