--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>sam's final sem @ purdue</h1>
-            <p>26 items for 2026 grad</p>
+       <header>
+            <h1>🎓 senior year bucket list</h1>
+            <p>purdue university 2025-2026</p>
         </header>
 
         <div class="stats">
